--- a/withdraw.html
+++ b/withdraw.html
@@ -141,7 +141,7 @@ button:disabled { opacity:0.5; }
 </div>
 
 <script>
-const API = "/withdraw"; // all calls go through server
+const API = "/withdraw";
 const tg = window.Telegram?.WebApp;
 tg?.ready();
 
@@ -158,13 +158,12 @@ const generatePasscodeBtn = document.getElementById("generatePasscodeBtn");
 const passcodeContainer = document.getElementById("passcodeContainer");
 const passcodeInput = document.getElementById("passcode");
 
-// Disable form if no Telegram WebApp
 if(!telegramId){
   userInfo.innerHTML = "❌ Please open this page from the Telegram WebApp.";
 }
 
 let balanceNGN = 0;
-let ngnPerUsd = 0; // how many NGN = 1 USD (e.g. ~1600)
+let ngnPerUsd = 1600; // NGN per $1, updated from server
 
 // Show user info
 if(telegramId){
@@ -175,26 +174,11 @@ if(telegramId){
   `;
 }
 
-// Show message
 function showMsg(text, type="success"){
   msgBox.innerHTML = text ? `<div class="msg ${type}">${text}</div>` : "";
 }
 
-// Fetch NGN per USD rate (how many naira is 1 dollar)
-// We fetch USD/NGN rate: base=USD, so rates.NGN = NGN per 1 USD
-async function fetchNgnPerUsd(){
-  try {
-    const res = await fetch("https://api.exchangerate-api.com/v4/latest/USD");
-    const data = await res.json();
-    const rate = data?.rates?.NGN;
-    if(rate && rate > 100) return rate; // sanity check
-    return 1600; // fallback: ~₦1600 per $1
-  } catch {
-    return 1600; // fallback
-  }
-}
-
-// Load balance from server
+// Load balance from server (server also returns ngnPerUsd)
 async function loadBalance(){
   if(!telegramId) return;
   showMsg("Loading balance…", "loading");
@@ -207,19 +191,20 @@ async function loadBalance(){
     const d = await r.json();
     balanceNGN = d?.ngn || 0;
 
-    // If server returns the USD rate, use it; otherwise fetch it
+    // Use rate from server (same rate used server-side), fallback to 1600
     if(d?.usdRate && d.usdRate > 100){
       ngnPerUsd = d.usdRate;
-    } else {
-      ngnPerUsd = await fetchNgnPerUsd();
     }
 
     const balanceUsd = balanceNGN / ngnPerUsd;
 
     balanceBox.innerHTML = `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${balanceUsd.toFixed(2)}`;
 
-    // Show low balance warning if user can't meet EITHER minimum
-    if(balanceNGN < 5000 && balanceUsd < 20){
+    // Show low balance warning only if user can't meet EITHER minimum
+    const canBank = balanceNGN >= 5000;
+    const canCrypto = balanceUsd >= 20;
+
+    if(!canBank && !canCrypto){
       lowBalanceMsg.classList.remove("hidden");
       withdrawForm.classList.add("hidden");
     } else {
@@ -276,10 +261,12 @@ withdrawBtn.onclick = async () => {
   const passcodeVal = passcodeInput.value.trim();
   if(!passcodeVal) return showMsg("Enter your passcode", "error");
 
+  // amountNGN is always sent to server in NGN
   let amountNGN = 0;
 
   if(methodVal === "bank"){
     amountNGN = Number(bankAmount.value);
+    if(!amountNGN || amountNGN <= 0) return showMsg("Enter a valid amount", "error");
     if(amountNGN < 5000) return showMsg("Minimum bank withdrawal is ₦5,000", "error");
     if(amountNGN > balanceNGN) return showMsg("Insufficient balance", "error");
   }
@@ -289,8 +276,8 @@ withdrawBtn.onclick = async () => {
     if(!usd || usd <= 0) return showMsg("Enter a valid amount", "error");
     if(usd < 20) return showMsg("Minimum crypto withdrawal is $20", "error");
 
-    // Convert USD → NGN correctly: multiply by NGN-per-USD rate
-    amountNGN = usd * ngnPerUsd;
+    // Convert USD → NGN: multiply by how many naira per dollar
+    amountNGN = Math.round(usd * ngnPerUsd);
 
     if(amountNGN > balanceNGN){
       const availableUsd = (balanceNGN / ngnPerUsd).toFixed(2);
@@ -308,10 +295,10 @@ withdrawBtn.onclick = async () => {
       body: JSON.stringify({
         telegramId,
         method: methodVal,
-        amount: Math.round(amountNGN),
+        amount: amountNGN, // always NGN
         passcode: passcodeVal,
         details:{
-          bank: bank.value==="Other"?otherBank.value:bank.value,
+          bank: bank.value==="Other" ? otherBank.value : bank.value,
           accountName: acctName.value,
           accountNumber: acctNumber.value,
           wallet: wallet.value,
@@ -321,7 +308,7 @@ withdrawBtn.onclick = async () => {
       })
     });
     const data = await res.json();
-    if(!res.ok) throw new Error(data.error||"Withdrawal failed");
+    if(!res.ok) throw new Error(data.error || "Withdrawal failed");
 
     showMsg("✅ Withdrawal submitted successfully!", "success");
     balanceNGN = data.newBalance;
