--- a/unlockpromo.html
+++ b/unlockpromo.html
@@ -111,10 +111,10 @@ Choose how you want to unlock 👇
 <hr style="opacity:.2">
 
 <div id="whatsappBox" class="hidden">
-  <a href="https://chat.whatsapp.com/FVt9vJB1sbJ9q5LTQ0nB3O?mode=gi_t" target="_blank">
+  <a href="https://chat.whatsapp.com/BhsFmqjNj49LoaUxrGQuKet" target="_blank">
     <button class="whatsapp">📲 Join WhatsApp Group</button>
   </a>
-  <button class="copy" onclick="copyText('https://chat.whatsapp.com/FVt9vJB1sbJ9q5LTQ0nB3O?mode=gi_t')">
+  <button class="copy" onclick="copyText('https://chat.whatsapp.com/BhsFmqjNj49LoaUxrGQuKet')">
     📋 Copy WhatsApp Group Link
   </button>
   <input type="tel" id="taskWhatsapp" placeholder="Your WhatsApp number">
@@ -222,7 +222,7 @@ async function submitTask(){
   if(!taskShot.files.length) return taskStatus.innerHTML="❌ Upload proof";
 
   taskStatus.innerHTML="⏳ Sending...";
-  
+
   try {
     for(const f of taskShot.files){
       const reader = new FileReader();
