--- a/dashboard.html
+++ b/dashboard.html
@@ -413,7 +413,7 @@ a { color: var(--accent2); text-decoration: none; }
 
 <!-- TOP HEADER -->
 <div class="top-header">
-  <div class="brand">⚡ EarnDash</div>
+  <div class="brand">⚡ INTELLIGENT  PROMO EARNING DASHBOARD</div>
   <div class="header-badge">LIVE</div>
 </div>
 
