--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 <script>
 /* Defined early so inline onclick="openDeposit()" always works */
 function openDeposit() {
-  var depositUrl = 'https://intelgroup.onrender.com/deposit.html';
+  var depositUrl = 'https://t.me/intelligentpublicgroupsbot/deposit';
   if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.openLink) {
     window.Telegram.WebApp.openLink(depositUrl);
   } else {
