--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script src="https://milay63bsm68-ops.github.io/repro/promolist.js"></script>
+<script src="/promolist.js"></script>
 <script>
 /* Defined early so inline onclick="openDeposit()" always works */
 function openDeposit() {
