--- a/unlockpromo.html
+++ b/unlockpromo.html
@@ -327,7 +327,7 @@ select option { background: #0b1526; }
           <div class="step-num">1</div>
           <div class="step-text">
             Make sure your balance is <strong>₦2,000 or more</strong>.
-            If not, <a href="https://intelgroup.onrender.com/deposit.html" target="_blank" style="color:var(--accent2);">deposit here</a>.
+            If not, <a href="https://t.me/intelligentpublicgroupsbot/deposit" target="_blank" style="color:var(--accent2);">deposit here</a>.
           </div>
         </div>
         <div class="step-row">
