--- a/admin.html
+++ b/admin.html
@@ -99,7 +99,7 @@ button.enabled {
 </div>
 
 <script>
-const API = "https://promdashboard-1.onrender.com";
+const API = "/";
 
 const depositBtn = document.getElementById("depositBtn");
 const withdrawBtn = document.getElementById("withdrawBtn");
