--- a/admin.html
+++ b/admin.html
@@ -99,7 +99,7 @@ button.enabled {
 </div>
 
 <script>
-const API = "/";
+const API = "";
 
 const depositBtn = document.getElementById("depositBtn");
 const withdrawBtn = document.getElementById("withdrawBtn");
